@@ -170,6 +170,8 @@ check_for_file (const char* filename)
   struct stat stats;
   int ret;
   GtkWidget *dialog;
+  char *ut8_filename;
+  
   ret = stat (filename, &stats);
   if (ret == -1) {
     if (errno == ENOENT) {
@@ -184,11 +186,13 @@ check_for_file (const char* filename)
   }
   /* Otherwise the file exists and is large, ask user if they really
      want to overwrite it */
+  utf8_filename = g_filename_to_utf8 (filename, -1, NULL, NULL, NULL);
   dialog = gtk_message_dialog_new (GTK_WINDOW (main_window), GTK_DIALOG_MODAL,
                                    GTK_MESSAGE_QUESTION,
                                    GTK_BUTTONS_NONE,
                                    _("A file called '%s' exists, size %lu kB.\nDo you want to skip this track or overwrite it?"),
-                                   filename, (unsigned long)(stats.st_size / 1000));
+                                   utf8_filename, (unsigned long)(stats.st_size / 1000));
+  g_free (utf8_filename);
   gtk_dialog_add_button (GTK_DIALOG (dialog), _("_Skip"), GTK_RESPONSE_CANCEL);
   gtk_dialog_add_button (GTK_DIALOG (dialog), _("_Overwrite"), GTK_RESPONSE_ACCEPT);
   gtk_dialog_set_default_response (GTK_DIALOG (dialog), GTK_RESPONSE_ACCEPT);
