@@ -1,3 +1,8 @@
+2004-06-27  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* src/sj-extracting.c: (check_for_file):
+	Escape filename to utf8 before displaying it.
+
 2004-06-11  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extracting.c:
